bootstrap/loki-proxy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: loki-proxy
  namespace: loki
spec:
  selector:
    app: loki-proxy

  ports:
    - port: 80
      targetPort: 80
